--- a/kubernetes/base/kustomization.yaml
+++ b/kubernetes/base/kustomization.yaml
@@ -1,9 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-    - deplyoment.yaml
+    - deployment.yaml
 configMapGenerator:
-    - name: config-middleware-test
+    - name: config-skaffold-test
       literals:
         - TEST_INT=1234
         - TEST_STRING="a fun string;<>?:"
